C#_Framework/MyMachineControl_Toolkits/HTM_Bsp_Lib_4.06/Example/CVI/HTM_Bsp_Lib/HTM_Bsp_Lib.h

/* Exported function prototypes-----------------------------------------------*/
		
/* HTM BSP(HT Motion Board support package) configuration functions */
HTM_API I32 HTM_Bsp_GetVersionNo(void);
	
HTM_API char* HTM_Bsp_GetVersionInfo(void);
HTM_API I32 HTM_Bsp_ShowVersion(void);
HTM_API I32 HTM_Bsp_Init(HTM_INIT_PARA *init_para);
HTM_API I32 HTM_Bsp_InitFromFile(char xmlFile[]);
HTM_API I32 HTM_Bsp_Discard(void);
HTM_API I32 HTM_Bsp_LoadInitParaFromFile(char xmlFile[], HTM_INIT_PARA *init_para);
HTM_API I32 HTM_Bsp_SaveInitParaToFile(HTM_INIT_PARA *init_para, char xmlFile[]);
HTM_API I32 HTM_Bsp_GetInitPara(HTM_INIT_PARA *init_para);
HTM_API I32 HTM_Bsp_GetMode(void);
HTM_API char *HTM_Bsp_GetConfigFilePath(void);
HTM_API I32 HTM_Bsp_GetLastErrCode(void);
HTM_API char *HTM_Bsp_GetLastErrStr(void);
HTM_API I32 HTM_Bsp_LoadUI(void);
HTM_API I32 HTM_Bsp_DiscardUI(void);
HTM_API I32 HTM_Bsp_LoadToolUI(void);
HTM_API I32 HTM_Bsp_DiscardToolUI(void);
/* HTM_EventLog APIs*/
HTM_API I32 HTM_EventLog_LoadUI(void);
 
HTM_API I32 HTM_EventLog_DiscardUI(void);
HTM_API I32 HTM_EventLog_Start(int task_id, char event_name[], char *info_fmt, ...);
 
HTM_API I32 HTM_EventLog_End(int task_id);
	
/* Axis operation APIs */
HTM_API I32 HTM_LoadAxisInfo(I32 axisIdx);
HTM_API I32 HTM_SaveAxisInfo(I32 axisIdx);
HTM_API I32 HTM_GetAxisInfo(I32 axisIdx, HTM_AxisInfo *axisInfo);
HTM_API I32 HTM_SetAxisInfo(I32 axisIdx, const HTM_AxisInfo *axisInfo);
/*------------ get(set) axis parameter functions---------------------------*/
HTM_API HTM_AxisStatus* HTM_GetAxisStatus(I32 axisIdx);
HTM_API I32 HTM_ConfigAxisInfo(I32 axisIdx);
HTM_API char*  HTM_GetAxisName(I32 axisIdx);
HTM_API F64 HTM_GetMaxVel(I32 axisIdx);
HTM_API F64 HTM_GetTimeOut(I32 axisIdx);
HTM_API F64 HTM_GetPulseFactor(I32 axisIdx);
HTM_API HTM_MovePara *HTM_GetMovePara(I32 axisIdx);
/*--------------get(set) motion position(velocity) command(feedback)-------*/
HTM_API I32 HTM_SetCurHomePos(I32 axisIdx);
HTM_API F64 HTM_GetCmdPos(I32 axisIdx);
HTM_API I32 HTM_SetCmdPos(I32 axisIdx, F64 cmdpos_in_unit);
HTM_API F64 HTM_GetFbkPos(I32 axisIdx);
HTM_API I32 HTM_SetFbkPos(I32 axisIdx, F64 fbkpos_in_unit);
HTM_API F64 HTM_GetCmdVel(I32 axisIdx);
HTM_API F64 HTM_GetFbkVel(I32 axisIdx);