C#Winform/MyMachineControl_Toolkits/HTM_interface/HTM_interface/HTM_Bsp_Lib.cs


        /// <summary>快速停止减速度(m/s2), 该参数对HTM_EStop急停接口有效</summary>
        public Double stopDec;
    }
    /// <summary>轴状态结构，包含轴的状态信息，如报警、限位、位置等。</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct AXIS_STATUS
    {
        /// <summary>报警信号(0/1)</summary>
        public Byte alm;
        /// <summary>正限位信号(0/1)</summary>
        public Byte pel;
        /// <summary>负限位信号(0/1)</summary>
        public Byte mel;
        /// <summary>原点信号(0/1)</summary>
        public Byte org;
        /// <summary>index信号(0/1)</summary>
        public Byte idx;
        /// <summary>INP信号(0/1)</summary>
        public Byte inp;
        /// <summary>励磁信号(0/1)</summary>
        public Byte svon;
        /// <summary>指令位置(mm)</summary>
        public Double cmdPos;
        /// <summary>反馈信号(mm)</summary>
        public Double fbkPos;
    }
    /// <summary>IO信息结构，包含IO设备的信息，如地址、方向、极性等</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct IO_INFO
    {
        /// <summary>IO名称(不超过32个字节)</summary>
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
        public String ioName;
        /// <summary>总线号</summary>
        public UInt16 busNo;
        /// <summary>节点号</summary>
        public UInt16 nodeAddr;
        /// <summary>端口号</summary>
        public UInt16 portNo;
        /// <summary>IO方向(0-输入,1-输出)</summary>
        public Byte ioSrc;
        /// <summary>极性(0-默认,1-取反)</summary>
        public Byte polarity;
        /// <summary>禁用(0-不禁用,1-禁用)禁用后将不能正常操作该设备</summary>
        public Byte disable;
    }
    /// <summary>点表触发模式配置，包含触发点的位置、方向、使能等信息</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct TRIG_POINT
    {
        /// <summary>Position 触发位置</summary>
        public Double pos;
        /// <summary>Direction触发方向</summary>
        public Byte dir;
        /// <summary>使能0-不使能，1-使能</summary>
        public Byte enable;
    }
    /// <summary>线性触发模式配置, 包含触发的起点、终点、间隔等信息</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct TRIG_LINEAR
    {
        /// <summary>线性触发起始位置(mm)</summary>
        public Double startPos;
        /// <summary>线性触发结束位置(mm)</summary>
        public Double endPos;
        /// <summary>线性触发间隔(mm)</summary>
        public Double interval;
    }
    /// <summary>位置触发板信息，包含对应的轴、触发模式等</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct POS_TRIG_PARA
    {
        /// <summary>对应轴</summary>
        public Byte axisIdx;
        /// <summary>触发模式 0点表1线性</summary>
        public Byte trigMode;
        /// <summary>取反(0-默认，1-取反)</summary>
        public Byte polarity;
        /// <summary>点表模式触发位置(mm)</summary>
        [MarshalAsAttribute(UnmanagedType.ByValArray, SizeConst = (int)HTM_Define.MAX_TRIGPT_NUM, ArraySubType = UnmanagedType.Struct)]
        public TRIG_POINT[] trigPt;
        /// <summary>线性触发使能</summary>
        public Byte lineEnable;
        /// <summary>线性触发配置</summary>
        public TRIG_LINEAR trigLin;
        /// <summary>相机触发超前时间(us)</summary>
        public Double ffTime;
    }
    /// <summary>光源驱动板信息，包含触发源、触发时间等信息</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct LIGHT_DIRVE_PARA
    {
        /// <summary>触发源</summary>
        [MarshalAsAttribute(UnmanagedType.ByValArray, SizeConst = 4)]
        public Byte[] tirgSrc;
        /// <summary>脉冲宽度时间us</summary>
        public Double opTime;
    }
    /// <summary>串口信息，包含串口号、波特率等信息</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct COM_PARA
    {
        /// <summary>串口号</summary>
        public Int32 comNo;
        /// <summary>波特率</summary>
        public Int32 baudRate;
        /// <summary>校验位</summary>
        public Int32 parity;
        /// <summary>数据位</summary>
        public Int32 dataBit;
        /// <summary>停止位</summary>
        public Int32 stopBit;
    }
    /// <summary>设备参数结构，可以配置为不同的设备信息，类似于C语言中的联合体</summary>
    [StructLayout(LayoutKind.Explicit)]
    public struct DEVICE_PARA
    {
        /// <summary>位置触发板信息</summary>
        [FieldOffset(0)]
        public POS_TRIG_PARA posTrig;
        /// <summary>光源驱动板信息</summary>
        [FieldOffset(0)]
        public LIGHT_DIRVE_PARA light;
        /// <summary>串口信息</summary>
        [FieldOffset(0)]
        public COM_PARA com;
    }
    /// <summary>设备信息，包含设备地址、设备参数等信息</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct DEVICE_INFO
    {
        /// <summary>设备名称</summary>
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
        public String devName;
        /// <summary>总线号</summary>
        public UInt16 busNo;
        /// <summary>节点号</summary>
        public UInt16 nodeAddr;
        /// <summary>端口号</summary>
        public UInt16 portNo;
        /// <summary>设备类型</summary>
        public Byte devType;
        /// <summary>设备信息</summary>
        public DEVICE_PARA devPara;
    }
    #endregion

    #region  HT motion API接口，包含所有与C语言对应的原生接口
    /// <summary>HT motion API接口，包含所有与C语言对应的原生接口</summary>
    public class HTM_API
    {
        private const String _Dll = "HTM_Bsp_Lib.dll";
        private const CallingConvention _Cvt = CallingConvention.Cdecl;
        #region  HTM BSP(HT Motion Board support package) configuration functions
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_GetVersionNo();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_Bsp_GetVersionInfo();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_ShowVersion();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_Init(ref INIT_PARA init);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_InitFromFile(String xmlFile);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_Discard();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_LoadInitParaFromFile(String xmlFile, ref INIT_PARA init_para);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_SaveInitParaToFile(ref INIT_PARA init_para, String xmlFile);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_GetInitPara(out INIT_PARA init_para);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_GetMode();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_Bsp_GetConfigFilePath();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_GetLastErrCode();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_Bsp_GetLastErrStr();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_LoadUI();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_LoadToolUI();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_DiscardUI();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Bsp_DiscardToolUI();
        #endregion

        #region  HTM_EventLog APIs
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EventLog_LoadUI();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EventLog_DiscardUI();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EventLog_Start(Int32 task_id, string name, string info_fmt);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EventLog_End(Int32 task_id);
        #endregion

        #region  Axis operation APIs
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_InitAxisInfo(String file, UInt16 axisNum, Byte offline_mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern void HTM_DiscardAxisInfo();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LoadAxisInfo(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SaveAxisInfo(Int32 axisIdx);
        #endregion

        #region  Get(set) axis parameter functions
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetAxisInfo(Int32 axisIdx, out AXIS_INFO axisInfo);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetAxisInfo(Int32 axisIdx, ref AXIS_INFO axisInfo);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetAxisStatus(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ConfigAxisInfo(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetAxisName(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetMaxVel(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetTimeOut(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetPulseFactor(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetMovePara(Int32 axisIdx);
        #endregion

        #region  Get(set) motion position(velocity) command(feedback)
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetCurHomePos(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetCmdPos(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetCmdPos(Int32 axisIdx, Double cmdpos_in_unit);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetFbkPos(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetFbkPos(Int32 axisIdx, Double fbkpos_in_unit);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetCmdVel(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetFbkVel(Int32 axisIdx);
        #endregion
